# mcp_judge

./: README.md  pyproject.toml  server.py
.github/workflows/: python-publish.yml
mcp_judge/: README.md  pyproject.toml
