[project]
name = "mcp-judge"
version = "0.1.0"
description = "Juiz Computacional para LLMs - MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.3",
]
authors = [
    { name = "Mário Lucio", email = "marioluciofjr@gmail.com" }
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server.py"]
